Fixed CORS error and permitted OPTIONS requests